processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__fast__tests__all_ops__test_basic_block__stack_inputs_13_vec__Felt__from_u32_1__Felt__from_u32_2__Felt__from_u32_3__Felt___operations_65_vec__Operation__BCompress_.snap
---
source: processor/src/fast/tests/all_ops.rs
assertion_line: 134
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            16140412465146850395,
            6353378101671610475,
            14764942961475988078,
            15492774440906272595,
            0,
            0,
            0,
            0,
        ],
    },
)
