processor/src/fast/tests/snapshots/miden_processor__fast__tests__all_ops__fast__tests__all_ops__test_basic_block__stack_inputs_13_vec__Felt__from_u32_1__Felt__from_u32_2__Felt__from_u32_3__Felt___operations_65_vec__Operation__Compress_.snap
---
source: processor/src/fast/tests/all_ops.rs
expression: fast_stack_outputs
---
Ok(
    StackOutputs {
        elements: [
            1,
            2,
            3,
            4,
            5,
            6,
            7,
            8,
            6917040428292074587,
            6353378101671610475,
            5541570924621212270,
            6269402404051496787,
            0,
            0,
            0,
            0,
        ],
    },
)
